# de-ai-hilfer

./: .gitignore  README.md  compose.yaml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/.sqlx/: query-38cf507a9590ea31778e3295c49f507f8d2a17851a81608c9f1406af93408ecd.json  query-62599d59344c0a0f826ae59d7295b8f5e3a127486c4e5024e9ea301202578e34.json  query-82ac5041f4e01452a1e97f5443aba1584cca5f48e394c87a0b5638b4b658539e.json
backend/config/prompts/: default.yaml  model_a.md  phrase_module.md  stage2.md  structure.md
backend/eval/cases/: pilot_20.txt  usage_regression_40.txt
backend/eval/prompts/: analysis_learner_first.yaml  analysis_less_noise.yaml  analysis_structured_candidate.yaml  (+1 more)
backend/fixtures/: learning_order_preview_sample.json
backend/migrations/: 20250208_000001_initial_schema.sql  20260312_000002_dictionary_embeddings.sql  20260322_000003_dictionary_learning_order.sql  20260325_000004_dictionary_lexemes.sql  20260408_000005_knowledge_entry_lexeme_id.sql  20260409_000006_learning_order_lexeme_id.sql  20260708_000007_ai_model_settings.sql  20260709_000008_remove_legacy_phrase_fields.sql  20260710_000009_learning_engine_v3.sql
backend/scripts/: build_telc_learning_order.py  normalize_transitive_government.sh  prompt_ab_eval.py  prompt_ab_eval_core.py  staged_backfill_worker.sh
backend/src/: ai_settings_models.rs  config.rs  db.rs  dictionary_lexeme_models.rs  embedding.rs  embedding_frequency.rs  embedding_rate_limiter.rs  lib.rs  main.rs  models.rs  prompts.rs  state.rs  structured_analysis_models.rs
(+132 files in other folders)
